fixed frontend for npm vulnerability"

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-images-upload": "^1.2.8",
     "react-scripts": "^3.4.1",
     "typeface-roboto": "^0.0.75",
-    "websocket-extensions": "^0.1.4"
+    "websocket-extensions": "^0.1.4",
+    "lodash": "^4.17.19"
   },
   "scripts": {
     "start": "react-scripts start",
