--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "websocket-extensions": "^0.1.4",
     "lodash": "^4.17.19",
     "node-forge": "^0.10.0",
-    "serialize-javascript": "^3.1.0"
+    "serialize-javascript": "^3.1.0",
+    "object-path": "^0.11.5"
   },
   "scripts": {
     "start": "react-scripts start",
